ok, this should be a working version (haha kidding theres probably dozens of bugs)